# shadow-rendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.ilk
Master Thesis/: .gitignore  imgui.ini  main.tex
Master Thesis/biblio/: biblio.bib
Master Thesis/chapters/: 06.tex  07.tex  08.tex  0_editorials.tex  1_intro.tex  2_analysis.tex  3_subject.tex  4_experiments.tex  5_summary.tex
Master Thesis/config/: my-settings.tex  settings.tex
Master Thesis/graf/tests/basic/: results.txt
src/: BufferMemoryManager.cpp  BufferMemoryManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CbvSrvDescriptorHeapManager.cpp  CbvSrvDescriptorHeapManager.h  ConsoleHelper.cpp  ConsoleHelper.h  DXContext.cpp  DXContext.hpp  DefaultRenderer.cpp  DefaultRenderer.h  DefaultRenderer.hpp  DefaultTexturedMaterial.cpp  DefaultTexturedMaterial.h  DefaultTexturedMaterial.hpp  Engine.cpp  Engine.h  Engine.hpp  EngineHelpers.cpp  EngineHelpers.hpp  EngineObject.cpp  EngineObject.h  EngineStateModel.cpp  EngineStateModel.hpp  GaussianBlurMaterial.cpp  GaussianBlurMaterial.hpp  GlobalEngineState.cpp  GlobalEngineState.hpp  ImGuiController.cpp  ImGuiController.h  ImGuiController.hpp  ImGuiPerformanceWindow.cpp  ImGuiPerformanceWindow.hpp  ImGuiRenderingOptions.cpp  ImGuiRenderingOptions.hpp  LitMaterial.cpp  LitMaterial.h  LitMaterial.hpp  (+64 more)
src/Shaders/: PixelShader.hlsl  PixelShader_gaussian_blur.hlsl  PixelShader_lit.hlsl  PixelShader_normalsDebug.hlsl  PixelShader_shadow_mapping.hlsl  PixelShader_shadow_projection.hlsl  PixelShader_variance_shadow_mapping.hlsl  PixelShader_variance_shadow_mapping_depth.hlsl  VertexShader_gaussian_blur.hlsl  VertexShader_noTex.hlsl  VertexShader_normalsDebug.hlsl  VertexShader_shadow_mapping.hlsl  VertexShader_shadow_mapping_depth.hlsl  VertexShader_shadow_projection.hlsl  VertexShader_variance_shadow_mapping.hlsl  VertexShader_wireframe.hlsl
src/dx_sample_helper_modified/: DXSampleHelper.h
